--- a/templates/product.alternate.liquid
+++ b/templates/product.alternate.liquid
@@ -2,4 +2,4 @@
   The contents of the product.liquid template can be found in /sections/product-template/
 {% endcomment %}
 
-{% section 'product-template' %}
+{% section 'product-alternate-template' %}
