--- a/sections/product-alternate-template.liquid
+++ b/sections/product-alternate-template.liquid
@@ -306,10 +306,14 @@
       "default": true
     },
     {
-      "type": "richtext",
-      "id": "required_property",
-      "label: "Customized required property",
-      "info": "Supports richtext"
+      "type": "text",
+      "id": "custom_required_property",
+      "label": "Custom required property"
+    },
+    {
+      "type": "text",
+      "id": "custom_optional_property",
+      "label": "Custom optional property"
     }
   ]
 }
