--- a/templates/product.alternate.liquid
+++ b/templates/product.alternate.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  The contents of the product.liquid template can be found in /sections/product-template/
+  The contents of the product.liquid template can be found in /sections/
 {% endcomment %}
 
 {% section 'product-alternate-template' %}
