--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,6 +37,16 @@
   {% include 'google-fonts' %}
   {% include 'load-css' %}
 
+  {% comment %}
+  <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous">
+  </script>
+  {% endcomment %}
+  <script> <!-- window.jQuery || document.write('{{ 'jquery-3.2.1.min.js' | asset_url | script_tag | escape }}'); -->
+  <!-- {{ 'jquery-3.2.1.min.js' | asset_url | script_tag | escape }} -->
+  </script>
   <script>
     var theme = {
       stylesheet: "{{ 'theme.scss.css' | asset_url }}",
