--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,15 +37,12 @@
   {% include 'google-fonts' %}
   {% include 'load-css' %}
 
-  {% comment %}
   <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous">
   </script>
-  {% endcomment %}
-  <script> <!-- window.jQuery || document.write('{{ 'jquery-3.2.1.min.js' | asset_url | script_tag | escape }}'); -->
-  <!-- {{ 'jquery-3.2.1.min.js' | asset_url | script_tag | escape }} -->
+  <script> window.jQuery || document.write('<script src="{{ "jquery-3.2.1.min.js" | asset_url }}"><\/script>');
   </script>
   <script>
     var theme = {
