--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -24,7 +24,7 @@
   {% for item in cart.items %}
     {% if item.id == id %}
       {% assign gift_wraps_in_cart = item.quantity %}
-      //Dien
+      <!-- Dien -->
       {% assign gift_wraps_in_cart_key = item.key %}
     {% endif %}
   {% endfor %}
@@ -40,13 +40,17 @@
 
       Shopify.Cart.GiftWrap = {};
 
-      Shopify.Cart.GiftWrap.set = function() {
+      // Dien
+      Shopify.Cart.GiftWrap.set = function(items, callback) {
+          function setSuccess() { location.href = '/cart'; }
+          var itemsInCart = items || {{ items_in_cart }};
+          var done = (typeof callback === 'function') ? callback : setSuccess;
           jQuery.ajax({
               type: 'POST',
               url: '/cart/update.js',
-              data: { updates: { {{ id }}: {{ items_in_cart }} }, attributes: { 'gift-wrapping': true } },
+              data: { updates: { {{ id }}: itemsInCart }, attributes: { 'gift-wrapping': true } },
           dataType: 'json',
-              success: function() { location.href = '/cart'; }
+              success: done
           });
       };
 
@@ -96,8 +100,23 @@
 
       //Dien
       jQuery(function() {
-          jQuery('tr.{{ gift_wraps_in_cart_key }}').on('change', 'a.cart-item__meta-title', function refreshCart() {
-             // to be continued...
+          var itemsInCart = 0;
+          $('table.cart__table').on('change', 'input.cart-item__qty-input', function refreshCart() {
+              $('input.cart-item__qty-input').each(function countItems() {
+                  console.log($(this).attr('id'));
+                  if ($(this).attr('id').includes('{{ gift_wraps_in_cart_key }}')) {
+                      console.log("cart key matched");
+                      return 0;
+                  }
+                  itemsInCart += (+this.value);
+                  console.log(itemsInCart + " ");
+              });
+
+              // The id changes from updates_ to quantity_ after cart refresh!!!
+              $('#quantity_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).val(itemsInCart);
+              $('#updates_' + $.escapeSelector('{{ gift_wraps_in_cart_key }}')).val(itemsInCart);
+              Shopify.Cart.GiftWrap.set(itemsInCart, $.noop);
+              itemsInCart = 0;
           });
       });
   </script>
