--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,6 +37,7 @@
   {% include 'google-fonts' %}
   {% include 'load-css' %}
 
+  <!-- Dien -->
   <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -44,6 +45,8 @@
   </script>
   <script> window.jQuery || document.write('<script src="{{ "jquery-3.2.1.min.js" | asset_url }}"><\/script>');
   </script>
+  <!-- end Dien -->
+
   <script>
     var theme = {
       stylesheet: "{{ 'theme.scss.css' | asset_url }}",
