Added shipping rate calculator

--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -147,6 +147,7 @@
     </table>
 
     {% include 'gift-wrapping' %}
+    {% include 'shipping-calculator' %}
 
     <footer class="cart-footer">
       <div class="grid">
