Implemented: prevent form submission on ENTER with shipping calculator input fields

--- a/snippets/shipping-calculator.liquid
+++ b/snippets/shipping-calculator.liquid
@@ -65,6 +65,28 @@
         moneyFormat: {{ shop.money_with_currency_format | json }}
     } );
 
+    // Dien
+    // Prevents ENTER default behavior, e.g. form submission and page refresh, on non-button form controls
+    // Only makes AJAX call if zipcode field is not empty.
+    jQuery(function() {
+        // Using jQuery :input selector to select all form controls
+        $('#shipping-calculator').on('keypress', ':input[type!="button"]' , function enterKeyHandler(e) {
+            console.dir(e);
+            console.dir(this);
+            if (e.which === 13) {
+                if (!jQuery.trim($('#address_zip').val())) {
+                    console.log('ENTER caught; preventDefault');
+                    e.preventDefault();
+                }
+                else {
+                    console.log('ENTER caught; triggerHandler(click)');
+                    // Contrary to trigger(), triggerHandler only operates on first matched element
+                    e.preventDefault();
+                    $('input.get-rates').triggerHandler('click');
+                }
+            }
+        });
+    });
 </script>
 
 {% endunless %}
